--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>Artist Portfolio Design</title>
-  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta property="og:title" content="">
@@ -15,6 +14,11 @@
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
+
+  <script src="https://kit.fontawesome.com/00e7f7acda.js" crossorigin="anonymous"></script>
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js ">
+    </script>
 
   <link rel="stylesheet" href="./css/normalize.css">
   <link rel="stylesheet" href="./css/main.css">
@@ -42,16 +46,15 @@
         <nav>
         <ul class="nav-list">
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Portfolio</a></li>
+          <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#">Services</a>
             <ul class="nav-dropdown">
-              <li><a href="#">Store</a></li>
-              <li><a href="#">Tattoo Contact Form</a></li>
+              <li><a href="#tattoo-contact-form">Tattoo Contact Form</a></li>
+              <li><a href="#store">Store</a></li>
               <li><a href="#">Commissions</a></li>
             </ul>
           </li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#contact-me">Contact</a></li>
         </ul>
       
     </div>
@@ -60,25 +63,144 @@
 
 </div>
 
+<div class="main-content-wrapper">
+
 
 <div class="about">
   <section id="avatar">
     <img src="https://images.unsplash.com/photo-1573140247632-f8fd74997d5c?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt="Avatar" alt="woman with red hair">
   </section>
     
-  
-  
   <div class="about-description">
     <h1>About Me</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi.</p>
   </div>
 </div>
 
-<div class="portfolio">
+<section id="portfolio">
+  <h1>Portfolio</h1>
+  
+</section>
+
+<section id="tattoo-contact-form">
+  <div class="form">
+    <h1>Tattoo Contact Form</h1>
+    <form name="contactForm" action="/file.php" onsubmit="return validateForm()" method="post">
+      <table class="form-style">
+        <tr>
+          <td>
+            <label>
+              First & last name <span class="required">*</span>
+            </label>
+          </td>
+          <td>
+            <input type="text" name="name" class="long"/>
+            <span class="error" id="errorname"></span>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <label>
+              Pronouns<span class="required">*</span>
+            </label>
+          </td>
+          <td>
+            <input type="text" name="pronouns" class="long"/>
+            <span class="error" id="errorpronouns"></span>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <label>
+              Email Address <span class="required">*</span>
+            </label>
+          </td>
+          <td>
+            <input type="email" name="email" class="long">
+            <span class="error" id="erroremail"></span>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <label>
+              Phone Number <span class="required">*</span>
+            </label>
+          </td>
+          <td>
+            <input type="number" name="phone" class="long"><span class="error" id="phoneerror"></span>
+          </td>
+        </tr>
+
+        <tr>
+          <td>
+            <label>
+              Project Idea <span class="required">*</span>
+            </label>
+          </td>
+          <td>
+            <textarea name="project" class="long field-textarea"></textarea>
+            <span class="error" id="errormsg"></span>
+          </td>
+        </tr>
+        <tr>
+          <td></td>
+          <td>
+            <input type="submit" value="Send">
+            <input type="reset" value="Reset">
+          </td>
+        </tr>
+      </table>
+    </form>
+  </div>
+  
+</section>
+
+<section id="store">
+  <h1><a href="https://www.redbubble.com" target="_blank">Print Shop
+    <i class="fa-solid fa-wand-magic-sparkles"></i>
+  </a></h1>
+  
+</section>
 
 </div>
 
 
+<footer id="contact">
+  <div class="content-wrapper">
+    <h3>Let's Connect</h3>
+    <div class="content-wrapper">
+      <div class="contact-info">
+        <p><a href="#tattoo-contact-form">Tattoo Contact Form</a></p>
+        <p>Non nisi est sit amet facilisis magna. Risus ultricies tristique nulla aliquet enim tortor at. Id leo in vitae turpis massa sed. Lorem dolor sed viverra ipsum nunc aliquet bibendum enim facilisis.</p>
+      </div>
+
+      <div class="contact-info follow-section">
+        <h5 class="contact-title">Follow Me</h5>
+        <ul class="social-icons">
+          <li>
+            <a href="https://www.instagram.com/" target="_blank">instagram
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+          </li>
+
+          <li>
+            <a href="https://www.pinterest.com" target="_blank">pinterest
+              <i class="fa-brands fa-pinterest"></i>
+            </a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+
+  <p>Copyright</p>
+  <script> document.write(new Date().getFullYear())</script> Josefine Sans
+
+</footer>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
