--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <li><a href="#">Commissions</a></li>
             </ul>
           </li>
-        <li><a href="#contact-me">Contact</a></li>
+        <li><a href="#contact">Contact</a></li>
         </ul>
       
     </div>
